--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,54 +1,67 @@
-- type: parallel
+- type: serial
   steps:
-  - service: app
-    command: vendor/bin/phpunit tests/Auth/
-  - service: app
-    command: vendor/bin/phpunit tests/Broadcasting/
-  - service: app
-    command: vendor/bin/phpunit tests/Bus/
-  - service: app
-    command: vendor/bin/phpunit tests/Cache/
-  - service: app
-    command: vendor/bin/phpunit tests/Console/
-  - service: app
-    command: vendor/bin/phpunit tests/Container/
-  - service: app
-    command: vendor/bin/phpunit tests/Cookie/
-  - service: app
-    command: vendor/bin/phpunit tests/Database/
-  - service: app
-    command: vendor/bin/phpunit tests/Encryption/
-  - service: app
-    command: vendor/bin/phpunit tests/Events/
-  - service: app
-    command: vendor/bin/phpunit tests/Filesystem/
-  - service: app
-    command: vendor/bin/phpunit tests/Foundation/
-  - service: app
-    command: vendor/bin/phpunit tests/Hashing/
-  - service: app
-    command: vendor/bin/phpunit tests/Http/
-  - service: app
-    command: vendor/bin/phpunit tests/Log/
-  - service: app
-    command: vendor/bin/phpunit tests/Mail/
-  - service: app
-    command: vendor/bin/phpunit tests/Pagination/
-  - service: app
-    command: vendor/bin/phpunit tests/Pipeline/
-  - service: app
-    command: vendor/bin/phpunit tests/Queue/
-  - service: app
-    command: vendor/bin/phpunit tests/Redis/
-  - service: app
-    command: vendor/bin/phpunit tests/Routing/
-  - service: app
-    command: vendor/bin/phpunit tests/Session/
-  - service: app
-    command: vendor/bin/phpunit tests/Support/
-  - service: app
-    command: vendor/bin/phpunit tests/Translation/
-  - service: app
-    command: vendor/bin/phpunit tests/Validation/
-  - service: app
-    command: vendor/bin/phpunit tests/View/
+    - type: serial
+      steps:
+        - service: build
+          command: composer install --prefer-source --no-interaction
+    - type: parallel
+      steps:
+        - service: test
+          command: vendor/bin/phpunit tests/Auth/
+        - service: test
+          command: vendor/bin/phpunit tests/Broadcasting/
+        - service: test
+          command: vendor/bin/phpunit tests/Bus/
+        - service: test
+          command: vendor/bin/phpunit tests/Cache/
+        - service: test
+          command: vendor/bin/phpunit tests/Console/
+        - service: test
+          command: vendor/bin/phpunit tests/Container/
+        - service: test
+          command: vendor/bin/phpunit tests/Cookie/
+        - service: test
+          command: vendor/bin/phpunit tests/Database/
+        - service: test
+          command: vendor/bin/phpunit tests/Encryption/
+        - service: test
+          command: vendor/bin/phpunit tests/Events/
+        - service: test
+          command: vendor/bin/phpunit tests/Filesystem/
+        - service: test
+          command: vendor/bin/phpunit tests/Foundation/
+        - service: test
+          command: vendor/bin/phpunit tests/Hashing/
+        - service: test
+          command: vendor/bin/phpunit tests/Http/
+        - service: test
+          command: vendor/bin/phpunit tests/Log/
+        - service: test
+          command: vendor/bin/phpunit tests/Mail/
+        - service: test
+          command: vendor/bin/phpunit tests/Pagination/
+        - service: test
+          command: vendor/bin/phpunit tests/Pipeline/
+        - service: test
+          command: vendor/bin/phpunit tests/Queue/
+        - service: test
+          command: vendor/bin/phpunit tests/Redis/
+        - service: test
+          command: vendor/bin/phpunit tests/Routing/
+        - service: test
+          command: vendor/bin/phpunit tests/Session/
+        - service: test
+          command: vendor/bin/phpunit tests/Support/
+        - service: test
+          command: vendor/bin/phpunit tests/Translation/
+        - service: test
+          command: vendor/bin/phpunit tests/Validation/
+        - service: test
+          command: vendor/bin/phpunit tests/View/
+    - type: serial
+      steps:
+        - service: build
+          type: push
+          image_name: zachflower/codeship-jet-parallel-ci
+          registry: https://index.docker.io/v1/
+          encrypted_dockercfg_path: dockercfg.encrypted
